--- a/.github/workflows/mirror_and_readme.yml
+++ b/.github/workflows/mirror_and_readme.yml
@@ -29,7 +29,7 @@ jobs:
           src: gitcode/${{ matrix.src_user }}
           dst: github/oh-awesome
           dst_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          dst_token: ${{ secrets.GITHUB_TOKEN }}
+          dst_token: ${{ secrets.DST_GITHUB_TOKEN }}
           src_token: ${{ secrets.GITCODE_TOKEN }}
           account_type: ${{ matrix.account_type }}
           src_user: ${{ matrix.src_user }}
