fix: Grant workflow write permissions and configure Git LFS for incomplete pushes, and add error log.

--- a/.github/workflows/mirror_and_readme.yml
+++ b/.github/workflows/mirror_and_readme.yml
@@ -19,9 +19,15 @@ jobs:
             account_type: "org"
             static_list: "DevBox"
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Configure Git LFS
+        run: git config --global lfs.allowincompletepush true
 
       - name: Mirror Gitcode to GitHub
         uses: Yikun/hub-mirror-action@master
