--- a/.github/workflows/mirror_and_readme.yml
+++ b/.github/workflows/mirror_and_readme.yml
@@ -29,9 +29,7 @@ jobs:
       - name: Mirror Gitcode to GitHub
         uses: Yikun/hub-mirror-action@master
         env:
-          GIT_CONFIG_COUNT: "1"
-          GIT_CONFIG_KEY_0: "lfs.allowincompletepush"
-          GIT_CONFIG_VALUE_0: "true"
+          GIT_CONFIG_PARAMETERS: "'lfs.allowincompletepush=true'"
         with:
           src: gitcode/${{ matrix.src_user }}
           dst: github/oh-awesome
@@ -66,7 +64,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add README.md repo_data.json
+          git add profile/README.md repo_data.json
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
