feat: Refactor workflow to separate mirroring and README generation, output README to multiple locations, and add a git push error log file.

--- a/.github/workflows/mirror_and_readme.yml
+++ b/.github/workflows/mirror_and_readme.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  mirror-and-update:
+  mirror_only:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -18,9 +18,6 @@ jobs:
           - src_user: "OpenHarmonyPCDeveloper"
             account_type: "org"
             static_list: "DevBox"
-
-    permissions:
-      contents: write
 
     steps:
       - name: Checkout
@@ -42,6 +39,30 @@ jobs:
           force_update: true
           static_list: ${{ matrix.static_list }}
 
+      - name: Feishu Notification (Mirror)
+        if: always()
+        env:
+          FEISHU_WEBHOOK: ${{ secrets.FEISHU_WEBHOOK }}
+        run: |
+          STATUS="${{ job.status }}"
+          if [ "$STATUS" = "success" ]; then
+            EMOJI="✅"
+          else
+            EMOJI="❌"
+          fi
+          curl -X POST -H "Content-Type: application/json" \
+            -d "{\"msg_type\":\"text\",\"content\":{\"text\":\"$EMOJI Gitcode Mirror Finished\nStatus: $STATUS\nSource: ${{ matrix.src_user }}\nList: ${{ matrix.static_list }}\"}}" \
+            $FEISHU_WEBHOOK
+
+  generate-readme:
+    needs: mirror_only
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -53,7 +74,7 @@ jobs:
 
       - name: Generate README
         env:
-          GITHUB_USERNAME: "oh-awesome" # Fetch repos from this Org
+          GITHUB_USERNAME: "oh-awesome"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
           LLM_API_BASE: ${{ secrets.LLM_API_BASE }}
@@ -64,7 +85,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add profile/README.md repo_data.json
+          git add README.md profile/README.md repo_data.json
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
@@ -72,7 +93,7 @@ jobs:
             git push
           fi
 
-      - name: Feishu Notification
+      - name: Feishu Notification (README)
         if: always()
         env:
           FEISHU_WEBHOOK: ${{ secrets.FEISHU_WEBHOOK }}
@@ -83,7 +104,6 @@ jobs:
           else
             EMOJI="❌"
           fi
-
           curl -X POST -H "Content-Type: application/json" \
-            -d "{\"msg_type\":\"text\",\"content\":{\"text\":\"$EMOJI Gitcode Mirror & README Update Finished\nStatus: $STATUS\nRepo: ${{ github.repository }}\"}}" \
+            -d "{\"msg_type\":\"text\",\"content\":{\"text\":\"$EMOJI README Update Finished\nStatus: $STATUS\"}}" \
             $FEISHU_WEBHOOK
